feat: audit log, dashboard activity feed, charts, low stock alerts

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ZRP — Zonit Resource Planning</title>
 <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js"></script>
 <style>
   .sidebar-link { @apply flex items-center gap-3 px-4 py-2 text-sm text-gray-300 rounded-lg hover:bg-gray-700 hover:text-white transition-colors cursor-pointer; }
   .sidebar-link.active { @apply bg-gray-700 text-white; }
