--- a/static/index.html
+++ b/static/index.html
@@ -127,7 +127,10 @@
     <header class="bg-white shadow-sm border-b border-gray-200 px-6 py-3 flex items-center justify-between">
       <h1 id="page-title" class="text-lg font-semibold text-gray-800">Dashboard</h1>
       <div class="flex items-center gap-3">
-        <input id="global-search" type="text" placeholder="Search..." class="input w-64" onkeyup="handleGlobalSearch(event)">
+        <div class="relative">
+          <input id="global-search" type="text" placeholder="Search parts, ECOs, devices..." class="input w-72" autocomplete="off">
+          <div id="search-dropdown" class="absolute right-0 z-50 w-96 bg-white border border-gray-200 rounded-lg shadow-xl mt-1 max-h-96 overflow-y-auto hidden"></div>
+        </div>
         <span id="user-display" class="text-sm text-gray-600"></span>
         <button onclick="doLogout()" class="btn btn-secondary text-xs">Sign Out</button>
       </div>
@@ -257,10 +260,65 @@ async function handleRoute() {
   mod.render(container);
 }
 
-function handleGlobalSearch(e) {
-  // Modules can check window._globalSearch
-  window._globalSearch = e.target.value;
-}
+// Global Search
+(function() {
+  let searchTimer;
+  document.addEventListener('DOMContentLoaded', () => {
+    const input = document.getElementById('global-search');
+    const dropdown = document.getElementById('search-dropdown');
+    if (!input || !dropdown) return;
+
+    input.addEventListener('input', () => {
+      clearTimeout(searchTimer);
+      const q = input.value.trim();
+      if (q.length < 2) { dropdown.classList.add('hidden'); return; }
+      searchTimer = setTimeout(async () => {
+        try {
+          const res = await fetch(`/api/v1/search?q=${encodeURIComponent(q)}&limit=20`);
+          const json = await res.json();
+          const data = json.data || {};
+          const meta = json.meta || {};
+          let html = '';
+
+          const sections = [
+            { key: 'parts', label: '📦 Parts', route: 'parts', fmt: p => `<span class="font-mono text-blue-600">${p.ipn||p.IPN||p.pn||Object.values(p)[0]||''}</span> <span class="text-gray-500">${p.description||p.Description||''}</span>` },
+            { key: 'ecos', label: '🔄 ECOs', route: 'ecos', fmt: e => `<span class="font-mono text-blue-600">${e.id}</span> ${e.title}` },
+            { key: 'workorders', label: '⚙️ Work Orders', route: 'workorders', fmt: w => `<span class="font-mono text-blue-600">${w.id}</span> ${w.assembly_ipn}` },
+            { key: 'devices', label: '📱 Devices', route: 'devices', fmt: d => `<span class="font-mono text-blue-600">${d.serial_number}</span> ${d.customer||''}` },
+            { key: 'ncrs', label: '⚠️ NCRs', route: 'ncr', fmt: n => `<span class="font-mono text-blue-600">${n.id}</span> ${n.title}` },
+            { key: 'pos', label: '🛒 POs', route: 'procurement', fmt: p => `<span class="font-mono text-blue-600">${p.id}</span>` },
+            { key: 'quotes', label: '💰 Quotes', route: 'quotes', fmt: q => `<span class="font-mono text-blue-600">${q.id}</span> ${q.customer||''}` },
+          ];
+
+          for (const s of sections) {
+            const items = data[s.key] || [];
+            if (items.length === 0) continue;
+            html += `<div class="px-3 py-1 bg-gray-50 text-xs font-semibold text-gray-500 uppercase">${s.label} (${items.length})</div>`;
+            for (const item of items.slice(0, 5)) {
+              html += `<div class="px-3 py-2 hover:bg-blue-50 cursor-pointer text-sm" data-route="${s.route}">${s.fmt(item)}</div>`;
+            }
+          }
+
+          if (!html) html = '<div class="px-3 py-4 text-center text-gray-400 text-sm">No results</div>';
+          else html = `<div class="px-3 py-1 text-right text-xs text-gray-400">${meta.total||0} results</div>` + html;
+
+          dropdown.innerHTML = html;
+          dropdown.classList.remove('hidden');
+          dropdown.querySelectorAll('[data-route]').forEach(el => {
+            el.addEventListener('click', () => {
+              navigate(el.dataset.route);
+              dropdown.classList.add('hidden');
+              input.value = '';
+            });
+          });
+        } catch(e) { dropdown.classList.add('hidden'); }
+      }, 300);
+    });
+
+    input.addEventListener('blur', () => setTimeout(() => dropdown.classList.add('hidden'), 200));
+    input.addEventListener('keydown', (e) => { if (e.key === 'Escape') dropdown.classList.add('hidden'); });
+  });
+})();
 
 // Auth
 let currentUser = null;
