--- a/static/index.html
+++ b/static/index.html
@@ -152,6 +152,8 @@
       <a class="sidebar-link" data-route="rma" onclick="navigate('rma')">🔧 RMAs</a>
       <div class="sidebar-group">Sales</div>
       <a class="sidebar-link" data-route="quotes" onclick="navigate('quotes')">💰 Quotes</a>
+      <div class="sidebar-group">Reports</div>
+      <a class="sidebar-link" data-route="reports" onclick="navigate('reports')">📊 Reports</a>
       <div class="sidebar-group">Admin</div>
       <a class="sidebar-link" data-route="users" onclick="navigate('users')">👥 Users</a>
       <a class="sidebar-link" data-route="audit" onclick="navigate('audit')">📋 Audit Log</a>
@@ -314,7 +316,7 @@ const moduleNames = {
   dashboard: 'Dashboard', calendar: 'Calendar', parts: 'Parts (PLM)', ecos: 'ECOs', docs: 'Documents',
   inventory: 'Inventory', procurement: 'Purchase Orders', vendors: 'Vendors',
   workorders: 'Work Orders', testing: 'Test Records', ncr: 'NCRs',
-  devices: 'Devices', firmware: 'Firmware', rma: 'RMAs', quotes: 'Quotes', users: 'Users', audit: 'Audit Log', apikeys: 'API Keys'
+  devices: 'Devices', firmware: 'Firmware', rma: 'RMAs', quotes: 'Quotes', reports: 'Reports', users: 'Users', audit: 'Audit Log', apikeys: 'API Keys'
 };
 
 function navigate(route) {
@@ -484,6 +486,9 @@ async function doLogout() {
 
 window.addEventListener('hashchange', handleRoute);
 window.addEventListener('load', checkAuth);
+
+// Load config (gitplm-ui URL)
+fetch('/api/v1/config').then(r=>r.json()).then(d=>{if(d&&d.data)window._gitplmURL=d.data.gitplm_ui_url;}).catch(()=>{});
 
 // Mobile sidebar toggle
 function toggleSidebar() {
