feat: supplier price catalog, email notifications with triggers & log, custom dashboard widgets
Email Notifications:
- email_log table records all sent/failed emails
- Email Log table on Email Settings page
- GET /api/v1/email-log, GET/PUT /api/v1/settings/email, POST /api/v1/settings/email/test
- ECO approval → emails creator; low stock → emails admin; overdue WO → emails admin
- due_date column on work_orders, email column on users
- SMTPSendFunc injectable for mock testing
- Audit logging on config save and test send
- 13 email-specific Go unit tests

--- a/static/index.html
+++ b/static/index.html
@@ -158,6 +158,7 @@
       <a class="sidebar-link" data-route="users" onclick="navigate('users')">👥 Users</a>
       <a class="sidebar-link" data-route="audit" onclick="navigate('audit')">📋 Audit Log</a>
       <a class="sidebar-link" data-route="apikeys" onclick="navigate('apikeys')">🔑 API Keys</a>
+      <a class="sidebar-link" data-route="email" onclick="navigate('email')">📧 Email Settings</a>
     </nav>
   </aside>
 
@@ -314,9 +315,8 @@ function getModalValues(overlay) {
 const modules = {};
 const moduleNames = {
   dashboard: 'Dashboard', calendar: 'Calendar', parts: 'Parts (PLM)', ecos: 'ECOs', docs: 'Documents',
-  inventory: 'Inventory', procurement: 'Purchase Orders', vendors: 'Vendors',
   workorders: 'Work Orders', testing: 'Test Records', ncr: 'NCRs',
-  devices: 'Devices', firmware: 'Firmware', rma: 'RMAs', quotes: 'Quotes', reports: 'Reports', users: 'Users', audit: 'Audit Log', apikeys: 'API Keys'
+  devices: 'Devices', firmware: 'Firmware', rma: 'RMAs', quotes: 'Quotes', reports: 'Reports', users: 'Users', audit: 'Audit Log', apikeys: 'API Keys', email: 'Email Settings'
 };
 
 function navigate(route) {
