--- a/static/index.html
+++ b/static/index.html
@@ -11,14 +11,14 @@
 <script>tailwind.config = { darkMode: 'class' }</script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js"></script>
 <style>
-  .sidebar-link { @apply flex items-center gap-3 px-4 py-2 text-sm text-gray-300 rounded-lg hover:bg-gray-700/70 hover:text-white transition-all duration-150 cursor-pointer border-l-3 border-transparent; }
-  .sidebar-link:hover { transform: translateX(2px); }
-  .sidebar-link.active { @apply bg-blue-600/20 text-blue-400 border-l-blue-500 font-medium; }
-  .sidebar-link .sidebar-icon { @apply w-5 h-5 flex-shrink-0; }
-  .sidebar-link .sidebar-badge { @apply ml-auto bg-gray-700 text-gray-300 text-xs rounded-full px-1.5 py-0.5 min-w-[1.25rem] text-center; }
-  .sidebar-link.active .sidebar-badge { @apply bg-blue-600/30 text-blue-300; }
-  .sidebar-group { @apply flex items-center gap-2 text-xs font-semibold text-gray-500 uppercase tracking-wider px-4 mt-4 mb-1 cursor-pointer select-none hover:text-gray-400 transition-colors; }
-  .sidebar-group .chevron { @apply w-3 h-3 transition-transform duration-200; }
+  .sidebar-link { @apply flex items-center gap-2 px-3 py-1 text-xs text-gray-400 rounded-md hover:bg-gray-800 hover:text-gray-200 transition-colors duration-100 cursor-pointer border-l-2 border-transparent; }
+  .sidebar-link.active { @apply bg-blue-600/15 text-blue-400 border-l-blue-500 font-medium; }
+  .sidebar-link .sidebar-icon { @apply w-4 h-4 flex-shrink-0 opacity-70; }
+  .sidebar-link.active .sidebar-icon { @apply opacity-100; }
+  .sidebar-link .sidebar-badge { @apply ml-auto bg-gray-800 text-gray-400 text-[10px] leading-none rounded-full px-1.5 py-0.5 min-w-[1rem] text-center; }
+  .sidebar-link.active .sidebar-badge { @apply bg-blue-600/25 text-blue-300; }
+  .sidebar-group { @apply flex items-center gap-1.5 text-[10px] font-semibold text-gray-600 uppercase tracking-widest px-3 mt-3 mb-0.5 cursor-pointer select-none hover:text-gray-400 transition-colors; }
+  .sidebar-group .chevron { @apply w-2.5 h-2.5 transition-transform duration-200; }
   .sidebar-group.collapsed .chevron { transform: rotate(-90deg); }
   .sidebar-group-items { @apply overflow-hidden transition-all duration-200; max-height: 500px; }
   .sidebar-group-items.collapsed { max-height: 0; }
@@ -149,13 +149,13 @@
 
 <div id="app" class="flex h-full hidden">
   <!-- Sidebar -->
-  <aside id="sidebar" class="w-64 bg-gray-900 flex flex-col flex-shrink-0 overflow-y-auto md:relative">
-    <div class="px-4 py-5 flex items-center gap-3">
-      <div class="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center text-white font-bold text-sm">Z</div>
-      <span class="text-white font-bold text-lg">ZRP</span>
-      <span class="text-gray-500 text-xs">ERP</span>
+  <aside id="sidebar" class="w-56 bg-gray-900 flex flex-col flex-shrink-0 overflow-y-auto md:relative">
+    <div class="px-3 py-3 flex items-center gap-2 border-b border-gray-800 mb-1">
+      <div class="w-6 h-6 bg-blue-600 rounded flex items-center justify-center text-white font-bold text-[11px]">Z</div>
+      <span class="text-white font-semibold text-sm">ZRP</span>
+      <span class="text-gray-600 text-[10px]">ERP</span>
     </div>
-    <nav class="flex-1 px-2 pb-4" id="sidebar-nav">
+    <nav class="flex-1 px-1.5 pb-3" id="sidebar-nav">
       <a class="sidebar-link" data-route="dashboard" onclick="navigate('dashboard')">
         <svg class="sidebar-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3.75 6A2.25 2.25 0 016 3.75h2.25A2.25 2.25 0 0110.5 6v2.25a2.25 2.25 0 01-2.25 2.25H6a2.25 2.25 0 01-2.25-2.25V6zm10.5 0A2.25 2.25 0 0116.5 3.75h2.25A2.25 2.25 0 0121 6v2.25a2.25 2.25 0 01-2.25 2.25H16.5a2.25 2.25 0 01-2.25-2.25V6zM3.75 15.75A2.25 2.25 0 016 13.5h2.25a2.25 2.25 0 012.25 2.25V18a2.25 2.25 0 01-2.25 2.25H6A2.25 2.25 0 013.75 18v-2.25zm10.5 0A2.25 2.25 0 0116.5 13.5h2.25A2.25 2.25 0 0121 15.75V18a2.25 2.25 0 01-2.25 2.25H16.5a2.25 2.25 0 01-2.25-2.25v-2.25z"/></svg>
         Dashboard
